Fix calculation for length of LPAD() and RPAD() reported to client via mysql_fetch_fields(). (Bug #11311)

mysql-test/r/func_str.result:
  Add new results
mysql-test/t/func_str.test:
  Add new regression test
sql/item_strfunc.cc:
  Fix length reported for LPAD() and RPAD() -- they always truncate to the
  length that is given.